--- a/style.css
+++ b/style.css
@@ -30,13 +30,17 @@ h2{
   
     background-color: #A3E4DB;
    
+   
     
     
 }
 
 .skills{
     padding-top: 30px;
-    background-color: #FFC93C;
+    background-colory: #FFC93C;
+    background-image: url(pink.jpeg);
+
+    
 }
 
 .contact-me{
@@ -56,7 +60,6 @@ h2{
     position: abusolute;
     bottom:10px;
     right:400px;
-    margin-bottom: 0%;
 }
 
 .cloud-top{
@@ -71,6 +74,9 @@ h2{
 .middle-container{
     padding-top: 100px;
     padding-bottom: 100px;
+    background-image: url(https://miro.medium.com/max/3840/1*MIO6mt4iV2t4ITyE-VOb2g.jpeg)
+    
+
 }
 
 .profile-pic{
@@ -124,7 +130,9 @@ h2{
     background-color:#A3E4DB ;
     padding-top: 30px;
     position:absolute;
+   
     width: 100%;
+    
 
 }
 
