--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ h1{
     font-family: Sacramento;
     font-size: 400.5%;
     font-weight: normal;
-    color:#40514E ;
+    color:white ;
     line-height: 2.5;
   
 }
@@ -29,6 +29,7 @@ h2{
 .box0{
   
     background-color: #A3E4DB;
+    background-image: url(https://image.freepik.com/free-vector/geometric-pattern-corner_1409-1044.jpg);
    
    
     
