--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h2{
 .box0{
   
     background-color: #A3E4DB;
-    background-image: url(https://image.freepik.com/free-vector/geometric-pattern-corner_1409-1044.jpg);
+    background-image: url(vector.jpg);
    
    
     
